<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background"
    android:layout_height="match_parent"
    tools:context=".ui.ThankYouActivity">

    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />

        <com.example.edupay.font.RobotoTextView
            android:id="@+id/tvThankYou"
            style="@style/manrope.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/payment_msg"
            android:textColor="@color/btn_color"
            android:textSize="22sp"
            android:gravity="center"
            android:textStyle="bold" />

        <com.example.edupay.font.RobotoTextView
            android:id="@+id/tvDescription"
            style="@style/manrope.semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/confirmation_msg"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnDownloadReceipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_share" />

        <Button
            android:id="@+id/btnShareReceipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/share_receipt"
            android:visibility="gone" />

    </LinearLayout>

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>